--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <section>
-        <span>&copy; 2020 {{ .Site.Params.Author }}</span>
+        <span>&copy; 2020 &ndash; Design by <a href="https://kaes3kuch3n.de/">Luis Hankel</a></span>
     </section>
     <section>
         {{ range where .Site.RegularPages "Section" "" }}
