--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
     <section class="card-container">
         {{ range sort (where .Site.RegularPages "Section" "!=" "") "Title" }}
             <a href="{{ .Permalink }}" class="card">
-                <img src="images/placeholder.png" alt="{{ .Title }}">
+                <img src="{{ if .Params.card_image }}{{ print .File.Dir (.Resources.GetMatch .Params.card_image) }}{{ else }}images/placeholder.png{{ end }}" alt="{{ .Title }}">
                 <h2>{{ .Title }}</h2>
                 <span>{{ .Type }}</span>
                 <p>{{ .Summary }}</p>
