--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <section>
-        <span>&copy; 2020 &ndash; Design by <a href="https://kaes3kuch3n.de/">Luis Hankel</a></span>
+        <span>Licensed under <a href="https://creativecommons.org/licenses/by-nc/3.0/de/deed.en_US">CC BY-NC 3.0 DE</a></span>
     </section>
     <section>
         {{ range where .Site.RegularPages "Section" "" }}
