--- a/layouts/shortcodes/image.html
+++ b/layouts/shortcodes/image.html
@@ -1,10 +1,18 @@
 {{ $image := newScratch }}
 {{ if .IsNamedParams }}
-    {{ $image.Set "src" ($.Page.Resources.GetMatch (.Get "src")) }}
+    {{ if $.Page.Resources.GetMatch (.Get "src") }}
+        {{ $image.Set "src" ($.Page.Resources.GetMatch (.Get "src")) }}
+    {{ else }}
+        {{ $image.Set "src" ($.Page.Parent.Resources.GetMatch (.Get "src")) }}
+    {{ end }}
     {{ $image.Set "alt" (.Get "alt") }}
     {{ $image.Set "description" (.Get "description") }}
 {{ else }}
-    {{ $image.Set "src" ($.Page.Resources.GetMatch (.Get 0)) }}
+    {{ if $.Page.Resources.GetMatch (.Get 0) }}
+        {{ $image.Set "src" ($.Page.Resources.GetMatch (.Get 0)) }}
+    {{ else }}
+        {{ $image.Set "src" ($.Page.Parent.Resources.GetMatch (.Get 0)) }}
+    {{ end }}
     {{ $image.Set "alt" (.Get 1) }}
     {{ $image.Set "description" (.Get 2) }}
 {{ end }}
