--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
         {{ $current_semester := where .Site.Pages "Section" .Site.Params.currentSemester }}
         {{ range sort (where (where $current_semester "Kind" "section") "Type" "!=" .Site.Params.currentSemester) "Title" }}
             <a href="{{ .Permalink }}" class="card">
-                <img src="{{ if .Params.card_image }}{{ (.Resources.GetMatch .Params.card_image).RelPermalink }}{{ else }}images/placeholder.png{{ end }}" alt="{{ .Title }}">
+                <img src="{{ if (and .Params.card_image (.Resources.GetMatch .Params.card_image)) }}{{ (.Resources.GetMatch .Params.card_image).RelPermalink }}{{ else }}images/placeholder.png{{ end }}" alt="{{ .Title }}">
                 <h2>{{ .Title }}</h2>
                 <span>{{ .Type }}</span>
                 <p>{{ .Params.card_description }}</p>
