--- a/layouts/shortcodes/image.html
+++ b/layouts/shortcodes/image.html
@@ -7,6 +7,7 @@
     {{ end }}
     {{ $image.Set "alt" (.Get "alt") }}
     {{ $image.Set "description" (.Get "description") }}
+    {{ $image.Set "width" (.Get "width") }}
 {{ else }}
     {{ if $.Page.Resources.GetMatch (.Get 0) }}
         {{ $image.Set "src" ($.Page.Resources.GetMatch (.Get 0)) }}
@@ -15,10 +16,11 @@
     {{ end }}
     {{ $image.Set "alt" (.Get 1) }}
     {{ $image.Set "description" (.Get 2) }}
+    {{ $image.Set "width" (.Get 3) }}
 {{ end }}
 
 <figure>
-    <img src="{{ ($image.Get "src").RelPermalink }}" alt="{{ $image.Get "alt" }}">
+    <img src="{{ ($image.Get "src").RelPermalink }}" alt="{{ $image.Get "alt" }}" {{ if $image.Get "width" }}width="{{ $image.Get "width" }}"{{ end }}>
     {{ if $image.Get "description" }}
     <figcaption>{{ $image.Get "description" }}</figcaption>
     {{ end }}
