--- a/layouts/shortcodes/mediathek.html
+++ b/layouts/shortcodes/mediathek.html
@@ -9,4 +9,4 @@
     {{ $video.Set "height" (.Get 2) }}
 {{ end }}
 
-<iframe src="https://mediathek.htw-berlin.de/media/embed?key={{ $video.Get "id" }}&responsive=true&t=0" width="{{ $video.Get "width" }}" height="{{ $video.Get "height" }}" frameborder="0" allowfullscreen="allowfullscreen" allowtransparency="true" scrolling="no"></iframe>
+<iframe src="https://mediathek.htw-berlin.de/media/embed?key={{ $video.Get "id" }}&responsive=true&autoplay=false&t=0" width="{{ $video.Get "width" }}" height="{{ $video.Get "height" }}" frameborder="0" allowfullscreen="allowfullscreen" allowtransparency="true" scrolling="no"></iframe>
