Added semester subpages, added navigation

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,14 +1,9 @@
 {{ define "main" }}
     {{ .Content }}
     <section class="card-container">
-        {{ $current_semester := where .Site.Pages "Section" .Site.Params.currentSemester }}
-        {{ range sort (where (where $current_semester "Kind" "section") "Type" "!=" .Site.Params.currentSemester) "Title" }}
-            <a href="{{ .Permalink }}" class="card">
-                <img src="{{ if (and .Params.card_image (.Resources.GetMatch .Params.card_image)) }}{{ (.Resources.GetMatch .Params.card_image).RelPermalink }}{{ else }}images/placeholder.png{{ end }}" alt="{{ .Title }}">
-                <h2>{{ .Title }}</h2>
-                <span>{{ .Type }}</span>
-                <p>{{ .Params.card_description }}</p>
-            </a>
+        {{ $current_semester := where .Site.Pages "Section" .Site.Params.current_semester }}
+        {{ range sort (where (where $current_semester "Kind" "section") "Type" "!=" .Site.Params.current_semester) "Title" }}
+            {{- partial "projectcard.html" . -}}
         {{ end }}
     </section>
 {{ end }}
