--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,5 +7,6 @@
             {{- block "main" . }}{{- end }}
         </main>
         {{- partial "footer.html" . -}}
+        <script src="{{ "dist/js/menu.js" | relURL }}" type="text/javascript"></script>
     </body>
 </html>
