--- a/layouts/shortcodes/back.html
+++ b/layouts/shortcodes/back.html
@@ -1,1 +1,1 @@
-<a href="{{ $.Page.Parent.RelPermalink }}">&#8592; {{ $.Page.Parent.Name }}</a>
+<a href="{{ $.Page.Parent.RelPermalink }}">&leftarrow; {{ $.Page.Parent.Name }}</a>
